# log

./: .gitignore  CMakeLists.txt  README.md  log-config.cmake.in
.github/workflows/: test.yml
src/: log.c
src/log/: log.h  spinlock.h
test/: CMakeLists.txt  c11threads.h  levels.c  macro.c  threads.c
